Fix issues with time line on IE10

--- a/assets/sass/layout/_section-timeline.scss
+++ b/assets/sass/layout/_section-timeline.scss
@@ -1,10 +1,13 @@
 .section-timeline {
   position: relative;
+  display: flex;
+  overflow: hidden;
 
   .title-vertical {
     @include media($medium-screen-up) {
       width: 1.75em;
       position: relative;
+      max-width: 5%;
       z-index: 2;
       order: 1;
     }
@@ -16,13 +19,14 @@
     position: relative;
 
     @include media($medium-screen-up) {
-      width: 95%;
+      max-width: 95%;
       margin: 0 auto 0 0;
 
       &:before {
         content: '';
+        display: block;
         position: absolute;
-        left: 30.5%;
+        left: 30%;
         width: 14px;
         height: 100%;
         z-index: 5;
@@ -54,8 +58,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        max-width: 34%;
-        flex-basis: 34%;
+        max-width: 30%;
+        flex-basis: 30%;
         padding: 2em 3em 2em 0;
         transition: border-color 500ms $base-timing;
       }
@@ -81,8 +85,8 @@
 
       @include media($medium-screen-up) {
         background-color: $lightest-gray;
-        max-width: 75%;
-        flex-basis: 75%;
+        max-width: 70%;
+        flex-basis: 70%;
         padding: 3.5em 5em;
       }
 
